hphp/hack/test/typecheck/dynamic/coercion/unresolved.php.exp
File "unresolved.php", line 9, characters 7-16:
You are trying to access the method 'someMethod' but this is an int (Typing[4062])
File "unresolved.php", line 5, characters 10-10:
Definition is here
